fixed image overflow on about page on mobile

--- a/kikar_hamedina/static/css/about.css
+++ b/kikar_hamedina/static/css/about.css
@@ -2,13 +2,17 @@
   padding: 30px;
 }
 
-.hasadna-logo-img {
-  margin-left: 5px;
-  height: 20px;
+.about-page-logo {
+  max-width: 100%;
 }
 
 .features-list {
   list-style: none;
   padding: 0;
   font-size: 18px;
+}
+
+.hasadna-logo-img {
+  margin-left: 5px;
+  height: 20px;
 }
